tests/cn/mutual_rec/mutual_rec1.c.test
return code: 1
./mutual_rec1.test.c:176:8: error: redefinition of 'a_node'
  176 | struct a_node {
      |        ^
./mutual_rec1.test.c:127:8: note: previous definition is here
  127 | struct a_node {
      |        ^
./mutual_rec1.test.c:203:8: error: redefinition of 'b_node'
  203 | struct b_node {
      |        ^
./mutual_rec1.test.c:134:8: note: previous definition is here
  134 | struct b_node {
      |        ^
In file included from ./mutual_rec1.test.c:289:
./mutual_rec1.gen.h:92:30: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
   92 |       a_1408->u.b_node->even = E_3->t;
      |                              ^ ~~~~~~
./mutual_rec1.gen.h:93:29: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
   93 |       a_1408->u.b_node->odd = O_3->t;
      |                             ^ ~~~~~~
./mutual_rec1.gen.h:133:30: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  133 |       a_1467->u.b_node->even = E_2->t;
      |                              ^ ~~~~~~
./mutual_rec1.gen.h:134:29: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  134 |       a_1467->u.b_node->odd = O_2->t;
      |                             ^ ~~~~~~
./mutual_rec1.gen.h:174:30: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  174 |       a_1526->u.b_node->even = E_1->t;
      |                              ^ ~~~~~~
./mutual_rec1.gen.h:175:29: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  175 |       a_1526->u.b_node->odd = O_1->t;
      |                             ^ ~~~~~~
./mutual_rec1.gen.h:220:30: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  220 |       a_1599->u.b_node->even = E->t;
      |                              ^ ~~~~
./mutual_rec1.gen.h:221:29: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  221 |       a_1599->u.b_node->odd = O->t;
      |                             ^ ~~~~
./mutual_rec1.gen.h:286:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  286 |       a_1671->u.a_node->k = fresh_11;
      |                           ^ ~~~~~~~~
./mutual_rec1.gen.h:287:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  287 |       a_1671->u.a_node->v = fresh_10;
      |                           ^ ~~~~~~~~
./mutual_rec1.gen.h:288:30: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  288 |       a_1671->u.a_node->left = L_3->t;
      |                              ^ ~~~~~~
./mutual_rec1.gen.h:289:31: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  289 |       a_1671->u.a_node->right = R_3->t;
      |                               ^ ~~~~~~
./mutual_rec1.gen.h:333:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  333 |       a_1734->u.a_node->k = fresh_9;
      |                           ^ ~~~~~~~
./mutual_rec1.gen.h:334:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  334 |       a_1734->u.a_node->v = fresh_8;
      |                           ^ ~~~~~~~
./mutual_rec1.gen.h:335:30: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  335 |       a_1734->u.a_node->left = L_2->t;
      |                              ^ ~~~~~~
./mutual_rec1.gen.h:336:31: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  336 |       a_1734->u.a_node->right = R_2->t;
      |                               ^ ~~~~~~
./mutual_rec1.gen.h:380:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  380 |       a_1797->u.a_node->k = fresh_6;
      |                           ^ ~~~~~~~
./mutual_rec1.gen.h:381:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  381 |       a_1797->u.a_node->v = fresh_5;
      |                           ^ ~~~~~~~
./mutual_rec1.gen.h:382:30: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  382 |       a_1797->u.a_node->left = L_1->t;
      |                              ^ ~~~~~~
./mutual_rec1.gen.h:383:31: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  383 |       a_1797->u.a_node->right = R_1->t;
      |                               ^ ~~~~~~
./mutual_rec1.gen.h:432:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  432 |       a_1874->u.a_node->k = fresh_3;
      |                           ^ ~~~~~~~
./mutual_rec1.gen.h:433:27: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  433 |       a_1874->u.a_node->v = fresh_2;
      |                           ^ ~~~~~~~
./mutual_rec1.gen.h:434:30: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  434 |       a_1874->u.a_node->left = L->t;
      |                              ^ ~~~~
./mutual_rec1.gen.h:435:31: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  435 |       a_1874->u.a_node->right = R->t;
      |                               ^ ~~~~
./mutual_rec1.test.c:346:25: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  346 |     a_2954->u.a_node->k = V->k;
      |                         ^ ~~~~
./mutual_rec1.test.c:347:25: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  347 |     a_2954->u.a_node->v = V->v;
      |                         ^ ~~~~
./mutual_rec1.test.c:348:28: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  348 |     a_2954->u.a_node->left = L->t;
      |                            ^ ~~~~
./mutual_rec1.test.c:349:29: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  349 |     a_2954->u.a_node->right = R->t;
      |                             ^ ~~~~
./mutual_rec1.test.c:374:28: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  374 |     a_2973->u.b_node->even = E->t;
      |                            ^ ~~~~
./mutual_rec1.test.c:375:27: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  375 |     a_2973->u.b_node->odd = O->t;
      |                           ^ ~~~~
./mutual_rec1.test.c:452:25: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  452 |     a_2841->u.a_node->k = V->k;
      |                         ^ ~~~~
./mutual_rec1.test.c:453:25: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  453 |     a_2841->u.a_node->v = V->v;
      |                         ^ ~~~~
./mutual_rec1.test.c:454:28: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  454 |     a_2841->u.a_node->left = L->t;
      |                            ^ ~~~~
./mutual_rec1.test.c:455:29: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  455 |     a_2841->u.a_node->right = R->t;
      |                             ^ ~~~~
./mutual_rec1.test.c:478:28: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  478 |     a_2862->u.b_node->even = E->t;
      |                            ^ ~~~~
./mutual_rec1.test.c:479:27: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  479 |     a_2862->u.b_node->odd = O->t;
      |                           ^ ~~~~
./mutual_rec1.test.c:676:25: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  676 |     a_2678->u.a_node->k = V->k;
      |                         ^ ~~~~
./mutual_rec1.test.c:677:25: error: incompatible pointer to integer conversion assigning to 'int' from 'cn_bits_i32 *' (aka 'struct cn_bits_i32 *') [-Wint-conversion]
  677 |     a_2678->u.a_node->v = V->v;
      |                         ^ ~~~~
./mutual_rec1.test.c:678:28: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  678 |     a_2678->u.a_node->left = L->t;
      |                            ^ ~~~~
./mutual_rec1.test.c:679:29: warning: incompatible pointer types assigning to 'struct b_node *' from 'struct b_tree *' [-Wincompatible-pointer-types]
  679 |     a_2678->u.a_node->right = R->t;
      |                             ^ ~~~~
./mutual_rec1.test.c:702:28: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  702 |     a_2694->u.b_node->even = E->t;
      |                            ^ ~~~~
./mutual_rec1.test.c:703:27: warning: incompatible pointer types assigning to 'struct a_node *' from 'struct a_tree *' [-Wincompatible-pointer-types]
  703 |     a_2694->u.b_node->odd = O->t;
      |                           ^ ~~~~
./mutual_rec1.test.c:962:49: warning: incompatible pointer types passing 'struct a_node *' to parameter of type 'struct a_tree *' [-Wincompatible-pointer-types]
  962 |       return cn_bool_and(struct_a_tree_equality(a_2267->odd, a_2268->odd), cn_bool_and(struct_a_tree_equality(a_2267->even, a_2268->even), convert_to_cn_bool(1)));
      |                                                 ^~~~~~~~~~~
./mutual_rec1.test.c:240:54: note: passing argument to parameter here
  240 | static cn_bool* struct_a_tree_equality(struct a_tree*, struct a_tree*);
      |                                                      ^
./mutual_rec1.test.c:962:62: warning: incompatible pointer types passing 'struct a_node *' to parameter of type 'struct a_tree *' [-Wincompatible-pointer-types]
  962 |       return cn_bool_and(struct_a_tree_equality(a_2267->odd, a_2268->odd), cn_bool_and(struct_a_tree_equality(a_2267->even, a_2268->even), convert_to_cn_bool(1)));
      |                                                              ^~~~~~~~~~~
./mutual_rec1.test.c:240:70: note: passing argument to parameter here
  240 | static cn_bool* struct_a_tree_equality(struct a_tree*, struct a_tree*);
      |                                                                      ^
./mutual_rec1.test.c:962:111: warning: incompatible pointer types passing 'struct a_node *' to parameter of type 'struct a_tree *' [-Wincompatible-pointer-types]
  962 |       return cn_bool_and(struct_a_tree_equality(a_2267->odd, a_2268->odd), cn_bool_and(struct_a_tree_equality(a_2267->even, a_2268->even), convert_to_cn_bool(1)));
      |                                                                                                               ^~~~~~~~~~~~
./mutual_rec1.test.c:240:54: note: passing argument to parameter here
  240 | static cn_bool* struct_a_tree_equality(struct a_tree*, struct a_tree*);
      |                                                      ^
./mutual_rec1.test.c:962:125: warning: incompatible pointer types passing 'struct a_node *' to parameter of type 'struct a_tree *' [-Wincompatible-pointer-types]
  962 |       return cn_bool_and(struct_a_tree_equality(a_2267->odd, a_2268->odd), cn_bool_and(struct_a_tree_equality(a_2267->even, a_2268->even), convert_to_cn_bool(1)));
      |                                                                                                                             ^~~~~~~~~~~~
./mutual_rec1.test.c:240:70: note: passing argument to parameter here
  240 | static cn_bool* struct_a_tree_equality(struct a_tree*, struct a_tree*);
      |                                                                      ^
./mutual_rec1.test.c:982:49: warning: incompatible pointer types passing 'struct b_node *' to parameter of type 'struct b_tree *' [-Wincompatible-pointer-types]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                 ^~~~~~~~~~~~~
./mutual_rec1.test.c:947:55: note: passing argument to parameter 'x' here
  947 | static cn_bool* struct_b_tree_equality(struct b_tree* x, struct b_tree* y)
      |                                                       ^
./mutual_rec1.test.c:982:64: warning: incompatible pointer types passing 'struct b_node *' to parameter of type 'struct b_tree *' [-Wincompatible-pointer-types]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                                ^~~~~~~~~~~~~
./mutual_rec1.test.c:947:73: note: passing argument to parameter 'y' here
  947 | static cn_bool* struct_b_tree_equality(struct b_tree* x, struct b_tree* y)
      |                                                                         ^
./mutual_rec1.test.c:982:115: warning: incompatible pointer types passing 'struct b_node *' to parameter of type 'struct b_tree *' [-Wincompatible-pointer-types]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                                                                                   ^~~~~~~~~~~~
./mutual_rec1.test.c:947:55: note: passing argument to parameter 'x' here
  947 | static cn_bool* struct_b_tree_equality(struct b_tree* x, struct b_tree* y)
      |                                                       ^
./mutual_rec1.test.c:982:129: warning: incompatible pointer types passing 'struct b_node *' to parameter of type 'struct b_tree *' [-Wincompatible-pointer-types]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                                                                                                 ^~~~~~~~~~~~
./mutual_rec1.test.c:947:73: note: passing argument to parameter 'y' here
  947 | static cn_bool* struct_b_tree_equality(struct b_tree* x, struct b_tree* y)
      |                                                                         ^
./mutual_rec1.test.c:982:177: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'void *' [-Wint-conversion]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                                                                                                                                                 ^~~~~~~~~
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:523:1: note: passing argument to parameter 'i1' here
  523 | CN_GEN_ALL(uint32_t, int32_t, cn_bits_i32)
      | ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:489:43: note: expanded from macro 'CN_GEN_ALL'
  489 | #define CN_GEN_ALL(UCTYPE, CTYPE, CNTYPE) CN_GEN_ALL_(UCTYPE, CTYPE, CNTYPE)
      |                                           ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:494:3: note: expanded from macro 'CN_GEN_ALL_'
  494 |   CN_GEN_EQUALITY(CNTYPE)                                                                \
      |   ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:240:33: note: expanded from macro 'CN_GEN_EQUALITY'
  240 | #define CN_GEN_EQUALITY(CNTYPE) CN_GEN_EQUALITY_(CNTYPE)
      |                                 ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:243:50: note: expanded from macro 'CN_GEN_EQUALITY_'
  243 |   static inline cn_bool* CNTYPE##_equality(void* i1, void* i2) {                         \
      |                                                  ^
./mutual_rec1.test.c:982:188: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'void *' [-Wint-conversion]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                                                                                                                                                            ^~~~~~~~~
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:523:1: note: passing argument to parameter 'i2' here
  523 | CN_GEN_ALL(uint32_t, int32_t, cn_bits_i32)
      | ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:489:43: note: expanded from macro 'CN_GEN_ALL'
  489 | #define CN_GEN_ALL(UCTYPE, CTYPE, CNTYPE) CN_GEN_ALL_(UCTYPE, CTYPE, CNTYPE)
      |                                           ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:494:3: note: expanded from macro 'CN_GEN_ALL_'
  494 |   CN_GEN_EQUALITY(CNTYPE)                                                                \
      |   ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:240:33: note: expanded from macro 'CN_GEN_EQUALITY'
  240 | #define CN_GEN_EQUALITY(CNTYPE) CN_GEN_EQUALITY_(CNTYPE)
      |                                 ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:243:60: note: expanded from macro 'CN_GEN_EQUALITY_'
  243 |   static inline cn_bool* CNTYPE##_equality(void* i1, void* i2) {                         \
      |                                                            ^
./mutual_rec1.test.c:982:233: error: incompatible integer to pointer conversion passing 'int' to parameter of type 'void *' [-Wint-conversion]
  982 |       return cn_bool_and(struct_b_tree_equality(a_2236->right, a_2237->right), cn_bool_and(struct_b_tree_equality(a_2236->left, a_2237->left), cn_bool_and(cn_bits_i32_equality(a_2236->v, a_2237->v), cn_bool_and(cn_bits_i32_equality(a_2236->k, a_2237->k), convert_to_cn_bool(1)))));
      |                                                                                                                                                                                                                                         ^~~~~~~~~
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:523:1: note: passing argument to parameter 'i1' here
  523 | CN_GEN_ALL(uint32_t, int32_t, cn_bits_i32)
      | ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:489:43: note: expanded from macro 'CN_GEN_ALL'
  489 | #define CN_GEN_ALL(UCTYPE, CTYPE, CNTYPE) CN_GEN_ALL_(UCTYPE, CTYPE, CNTYPE)
      |                                           ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:494:3: note: expanded from macro 'CN_GEN_ALL_'
  494 |   CN_GEN_EQUALITY(CNTYPE)                                                                \
      |   ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:240:33: note: expanded from macro 'CN_GEN_EQUALITY'
  240 | #define CN_GEN_EQUALITY(CNTYPE) CN_GEN_EQUALITY_(CNTYPE)
      |                                 ^
<OPAM_PREFIX>/lib/cn/runtime/include/cn-executable/utils.h:243:50: note: expanded from macro 'CN_GEN_EQUALITY_'
  243 |   static inline cn_bool* CNTYPE##_equality(void* i1, void* i2) {                         \
      |                                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
36 warnings and 20 errors generated.
Failed to compile 'mutual_rec1.test.c'.